  - Archive

Deprecated features
-------------------

- eZArchiveHandler
  This class and related sub-classes, such as eZTARArchiveHandler has been
  deprecated, they will be removed in eZ Publish 4.2. Archive from eZ Components
  is the intended replacement of this functionality.

- eZFile::getContents()
  The method getContents() of eZFile is deprecated now, use file_get_contents()
  instead.


Removed features
----------------

- eZSelectionType loose functions

  The file in which eZSelectionType is defined contained two loose functions,
  namely serializeContentObjectAttribute and unserializeContentObjectAttribute,
  which at the time of introducing them were supposed to be inside the class
  definition. These two functions have been removed.

- eZFilePassthroughHandler

  The deprecated class eZFilePassthroughHandler was removed. Use
  ezFilePassthroughHandler instead.

- eZXMLInputType

  The class eZXMLInputType, which was not any longer used by any part of the eZ
  Publish kernel, has been removed.

- eZURLTranslator

  The class eZURLTranslator, which was not any longer used by any part of the eZ
  Publish kernel, has been removed.

- eZDebugErrorHandler()
  The eZDebugErrorHandler() function that was declared in lib/ezutils/classes/ezdebug.php,
  has been removed. The new function eZDebug::recursionProtectErrorHandler() is
  used now as custom error handler.

- OpenFTS search plugin
  There existed some code to use OpenFTS as a search engine. This code was never completed
  though, and in an unusable state. Therefore it has been removed.


New constants in config.php
---------------------------

EZP_INI_FILEMTIME_CHECK
    This new setting controls whether eZINI should check if the settings have
    been updated in the *.ini-files*. If this check is disabled eZ Publish
    will always used the cached values, lowering the amount of stat-calls to
    the file system, and thus increasing performance.

EZP_AUTOLOAD_ALLOW_KERNEL_OVERRIDE